Vertically align issue token gubbins (previously baseline)

--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -742,6 +742,7 @@
 .add-issuable-form-input-token-list {
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
   list-style: none;
   margin-bottom: 0;
   padding-left: 0;
